7107042: assert(no_dead_loop) failed: dead loop detected

Use dead nodes elimination code in PhaseIdealLoop before executing EA.

Reviewed-by: never, twisti